Fixing findbugs report in RGISuite #65